fix breadcrumb spacing

--- a/_1327/static/scss/1327.scss
+++ b/_1327/static/scss/1327.scss
@@ -447,7 +447,7 @@ ul.breadcrumbs {
 		.glyphicon {
 			font-size: 8pt;
 		}
-		padding-right: 3px;
+		padding-right: 5px;
 	}
 	a {
 		color: $gray-lighter;
